--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -45,6 +45,10 @@ JSystem/JUtility/JUTDirectPrint.cpp:
     .sbss: [0x804157f0, 0x804157f8]
     .sdata2: [0x80417858, 0x804178b8]
 
+JSystem/JUtility/JUTPalette.cpp:
+    .text: [0x80071814, 0x80071920]
+    .rodata: [0x80361f90, 0x80361fc0]
+
 JSystem/JUtility/JUTProcBar.cpp:
     .text: [0x80071920, 0x80073a5c]
     .sdata: [0x80414070, 0x80414078]
