--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -227,6 +227,10 @@ dolphin/__ppc_eabi_init.cpp:
     .init: [0x80003400, 0x80003458]
     .text: [0x800ec7e8, 0x800ec87c]
 
+PowerPC_EABI_Support/MSL_C/MSL_Common/signal.c:
+    .text: [0x80106b24, 0x80106c0c]
+    .bss: [0x80386130, 0x80386148]
+
 Bando/EngineSound.cpp:
     .text: [0x8011226c, 0x801122dc]
     .data: [0x80353590, 0x803535e8]
