compile JKRSolidHeap with 1.3.2

--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -129,11 +129,11 @@ JSystem/JKernel/JKRMemArchive.cpp:
     .data: [0x80347e70, 0x80347ec0]
     .sdata2: [0x803d64e8, 0x803d64f0]
 
-#JSystem/JKernel/JKRSolidHeap.cpp:
-    #.text: [0x80015f40, 0x80016890]
-    #.rodata: [0x8032d3b8, 0x8032d500]
-    #.data: [0x80347ec0, 0x80347f20]
-    #.sdata2: [0x803d64f0, 0x803d6508]
+JSystem/JKernel/JKRSolidHeap.cpp:
+    .text: [0x80015f40, 0x80016890]
+    .rodata: [0x8032d3b8, 0x8032d500]
+    .data: [0x80347ec0, 0x80347f20]
+    .sdata2: [0x803d64f0, 0x803d6508]
 
 JSystem/JKernel/JKRThread.cpp:
     .text: [0x80016890, 0x80017254]
